lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  labels:
    app: react-app
spec:
  rules:
  - host: konstantin-sobolev.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port: 
              number: 3000
  tls:
    - hosts:
      - konstantin-sobolev.ru
      secretName: sobolev-tls
